# quantum-resources

./: .gitignore  README.md  apply_fix.py  check_usage.py  pyproject.toml
00-why-quantum/: README.md  what-a-qubit-really-is.md  why-classical-fails.md
01-linear-algebra-with-meaning/: README.md  complex-numbers-not-scary.ipynb  complex-numbers-not-scary.md  vectors-as-states.ipynb  vectors-as-states.md
02-single-qubit-world/: README.md  bloch-sphere-intuition.md  bloch-sphere.ipynb  gates-h-x-z-s-t.md  measurement-demo.ipynb  measurement.md  single-qubit-gates.ipynb
03-multiple-qubits/: README.md  entanglement-is-not-magic.md  entanglement.ipynb  tensor-product-intuition.md  tensor-products.ipynb
04-qiskit-basics/: README.md  first-circuit.ipynb  first-circuit.md  statevector-vs-measurement.ipynb  statevector-vs-measurement.md
05-qft-and-arithmetic/: README.md  add-with-qft.md  qft-addition.ipynb  qft-visualization.ipynb  what-qft-actually-does.md
06-algorithms/: README.md  deutsch-jozsa.md  grover.ipynb  grover.md  shor-intuition.md
appendix/: README.md
appendix/common-mistakes/: README.md  ancilla-qubits-are-not-free.md  approximate-qft-why-it-works.md  classical-control-vs-quantum-control.md  measurement-order-matters.md  phase-is-not-visible.md  reset-vs-uncompute.md  why-all-zeros.md  why-my-circuit-disappeared.md  why-noise-breaks-theory.md  why-quantum-is-not-just-linear-algebra.md
