[project]
name = "quantum-from-scratch"
version = "0.1.0"
description = "Beginner-friendly, intuition-first guide to quantum computing using Qiskit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "qiskit>=1.0.0",
    "qiskit-aer>=0.13.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "seaborn>=0.13.2",
]

[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "ruff>=0.1.0",
]

